[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/menus/run/zone_panel.gd" type="Script" id=1]
[ext_resource path="res://ui/menus/run/challenge_and_reward_ui.gd" type="Script" id=2]
[ext_resource path="res://items/consumables/fruit/fruit.png" type="Texture" id=3]
[ext_resource path="res://ui/menus/ingame/item_panel_ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/menus/pages/progress_challenge_ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=6]

[node name="ChallengeAndRewardUI" type="VBoxContainer"]
margin_left = 912.0
margin_right = 1820.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 600 )
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_constants/separation = 50
script = ExtResource( 2 )

[node name="ProgressChallengeUI" parent="." instance=ExtResource( 5 )]
margin_right = 908.0
margin_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 150.0
margin_right = 908.0
margin_bottom = 684.0
custom_constants/separation = 25

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 908.0
margin_bottom = 45.0
text = "REWARD"
align = 1

[node name="ItemPanelUI" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_left = 274.0
margin_top = 70.0
margin_right = 633.0
margin_bottom = 320.0

[node name="ZonePanel" type="PanelContainer" parent="VBoxContainer"]
margin_left = 306.0
margin_top = 345.0
margin_right = 602.0
margin_bottom = 534.0
size_flags_horizontal = 4
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ZonePanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 291.0
margin_bottom = 184.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ZonePanel/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 261.0
margin_bottom = 154.0

[node name="Label" type="Label" parent="VBoxContainer/ZonePanel/MarginContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 45.0
text = "ZONE_NAME"
align = 1

[node name="Icon" type="TextureRect" parent="VBoxContainer/ZonePanel/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 236.0
margin_bottom = 129.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}
